<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <FrameLayout android:layout_height="294dp"
        android:layout_width="wrap_content">

        <ImageView android:src="@drawable/coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="80sp"
             />

    </FrameLayout>

    <GridLayout android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:rowCount="7"
        android:columnCount="2"
        android:orientation="vertical">


        <TextView android:text="NAME :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView android:text="@string/proprietor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView android:text="ADDRESS :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView android:text="@string/address1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView android:text="@string/address2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView android:text="@string/address3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView android:text="EMAIL-ID :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="4"
            android:layout_column="0" />

        <TextView android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView android:text="MOB. :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="5"
            android:layout_column="0" />

        <TextView android:text="@string/mob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView android:text="Ph. :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="6"
            android:layout_column="0" />

        <TextView android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="top"
            android:layout_row="6"
            android:layout_column="1" />

    </GridLayout>

</LinearLayout>
